[package]
name = "guswynn-test-dep"
version = "0.2.0"
authors = ["Gus Wynn <guswynn@gmail.com>"]
edition = "2018"

license = "MIT OR Apache-2.0"
repository = "https://github.com/guswynn/test_rust"

description = "My test crate to test rust stuff and crates.io"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
